--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>اقتطاع عينات المعكرونة ومنتجات العجائن</title>
     <style>
-        /* استيراد خط عربي جمالي */
         @import url('https://fonts.googleapis.com/css2?family=Amiri:wght@700&family=Cairo:wght@600&display=swap');
 
         body {
@@ -13,16 +12,17 @@
             direction: rtl;
             text-align: right;
             margin: 0;
-            padding: 20px;
+            padding: 10px;
             background-image: url('pates.png');
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
+            font-size: 3vw; /* حجم الخط ديناميكي */
         }
         .header {
             text-align: center;
             margin-bottom: 30px;
-            padding: 20px;
+            padding: 10px;
             background-color: rgba(44, 62, 80, 0.8);
             color: #fff;
             border-radius: 12px;
@@ -30,19 +30,19 @@
         }
         .header h1 {
             font-family: 'Amiri', serif;
-            font-size: 2.5em;
+            font-size: 2em; /* حجم الخط ديناميكي */
             margin: 0;
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
         }
         .header h2 {
             font-family: 'Cairo', sans-serif;
-            font-size: 1.8em;
+            font-size: 1.35em;
             margin: 10px 0;
             text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
         }
         .header h3 {
             font-family: 'Cairo', sans-serif;
-            font-size: 1.4em;
+            font-size: 1.12em;
             margin: 5px 0;
             text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
         }
@@ -50,14 +50,14 @@
             max-width: 800px;
             margin: 0 auto;
             background-color: rgba(255, 255, 255, 0.9);
-            padding: 20px;
-            border-radius: 12px;
+            padding: 10px;
+            border-radius: 2px;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
         }
         select {
             width: 100%;
             padding: 12px;
-            font-size: 16px;
+            font-size: 1em;
             border: 2px solid #3498db;
             border-radius: 8px;
             margin-bottom: 20px;
@@ -78,21 +78,21 @@
             border-radius: 8px;
             margin-top: 20px;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-            transition: opacity 0.5s ease, transform 0.3s ease;
+            transition: opacity 0.13s ease, transform 0.3s ease; /* تعديل مدة الانتقال */
         }
         .details h2 {
             color: #34495e;
             margin-top: 0;
-            font-size: 1.8em;
+            font-size: 1.5em;
             text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.1);
         }
         .details p {
-            margin: 10px 0;
+            margin: 5px 0;
             color: #2c3e50;
             line-height: 1.6;
         }
         .details ul {
-            margin: 10px 0;
+            margin: 5px 0;
             padding-left: 20px;
             color: #2c3e50;
         }
@@ -107,8 +107,9 @@
             box-shadow: 0 6px 15px rgba(0, 0, 0, 0.2);
         }
         .regulations {
-            margin-top: 20px;
-            padding: 20px;
+            display: none; /* إخفاء اللوائح افتراضيًا */
+            margin-top: 10px;
+            padding: 10px;
             background-color: rgba(236, 240, 241, 0.9);
             border: 2px solid #bdc3c7;
             border-radius: 8px;
@@ -116,13 +117,8 @@
         }
         .regulations h2 {
             color: #34495e;
-            font-size: 1.8em;
+            font-size: 1.15em;
             margin-top: 0;
-        }
-        .regulations h3 {
-            color: #2c3e50;
-            font-size: 1.4em;
-            margin: 15px 0 10px;
         }
         .regulations ul {
             padding-left: 20px;
@@ -160,12 +156,11 @@
         <p><strong>التحديدات الميكروبيولوجية:</strong> وجود السالمونيلا، العد الفطري.</p>
         <p><strong>حفظ العينات:</strong> تخزين في عبوات محكمة مع جيل سيليكا.</p>
         <p><strong>نقل العينات:</strong> استخدام صناديق مفرغة من الهواء.</p>
-        <p><strong>المدة اللازمة للتحليل:</strong>
-            <ul>
-                <li>الفيزيوكيميائية: 48 ساعة.</li>
-                <li>الميكروبيولوجية: 5-7 أيام.</li>
-            </ul>
-        </p>
+        <p><strong>المدة اللازمة للتحليل:</strong></p>
+        <ul>
+            <li>الفيزيوكيميائية: 48 ساعة.</li>
+            <li>الميكروبيولوجية: 5-7 أيام.</li>
+        </ul>
     </div>
 
     <div id="pasta2" class="details">
@@ -177,12 +172,11 @@
         <p><strong>التحديدات الميكروبيولوجية:</strong> وجود الإشريكية القولونية، عد الخمائر.</p>
         <p><strong>حفظ العينات:</strong> تخزين في درجة حرارة 25°م مع تحكم بالرطوبة.</p>
         <p><strong>نقل العينات:</strong> استخدام عبوات مضادة للكسر.</p>
-        <p><strong>المدة اللازمة للتحليل:</strong>
-            <ul>
-                <li>الفيزيوكيميائية: 24-48 ساعة.</li>
-                <li>الميكروبيولوجية: 3-5 أيام.</li>
-            </ul>
-        </p>
+        <p><strong>المدة اللازمة للتحليل:</strong></p>
+        <ul>
+            <li>الفيزيوكيميائية: 24-48 ساعة.</li>
+            <li>الميكروبيولوجية: 3-5 أيام.</li>
+        </ul>
     </div>
 
     <div id="pasta3" class="details">
@@ -194,12 +188,11 @@
         <p><strong>التحديدات الميكروبيولوجية:</strong> وجود الليستيريا، عد البكتيريا اللاهوائية.</p>
         <p><strong>حفظ العينات:</strong> تجميد سريع عند -40°م.</p>
         <p><strong>نقل العينات:</strong> استخدام صناديق تبريد جاف مع ثلج جاف.</p>
-        <p><strong>المدة اللازمة للتحليل:</strong>
-            <ul>
-                <li>الفيزيوكيميائية: 72 ساعة.</li>
-                <li>الميكروبيولوجية: 7-10 أيام.</li>
-            </ul>
-        </p>
+        <p><strong>المدة اللازمة للتحليل:</strong></p>
+        <ul>
+            <li>الفيزيوكيميائية: 72 ساعة.</li>
+            <li>الميكروبيولوجية: 7-10 أيام.</li>
+        </ul>
     </div>
 
     <div id="pasta4" class="details">
@@ -211,49 +204,44 @@
         <p><strong>التحديدات الميكروبيولوجية:</strong> وجود بكتيريا Bacillus، عد الخمائر.</p>
         <p><strong>حفظ العينات:</strong> تخزين في عبوات معتمة عند 4°م.</p>
         <p><strong>نقل العينات:</strong> استخدام صناديق عازلة للضوء.</p>
-        <p><strong>المدة اللازمة للتحليل:</strong>
-            <ul>
-                <li>الفيزيوكيميائية: 48-72 ساعة.</li>
-                <li>الميكروبيولوجية: 5-7 أيام.</li>
-            </ul>
-        </p>
+        <p><strong>المدة اللازمة للتحليل:</strong></p>
+        <ul>
+            <li>الفيزيوكيميائية: 48-72 ساعة.</li>
+            <li>الميكروبيولوجية: 5-7 أيام.</li>
+        </ul>
     </div>
 
-    <!-- قسم النظم واللوائح الفنية -->
-    <div class="regulations">
-        <h2>النظم واللوائح الفنية</h2>
-        
-        <div id="pasta1Regulations">
-            <h3>المعكرونة الطويلة</h3>
-            <ul>
-                <li><strong>المواصفات القياسية الجزائرية (NA):</strong> NA 54321 - مواصفات المعكرونة الجافة.</li>
-                <li><strong>المواصفات الدولية (ISO):</strong> ISO 22000 - نظام سلامة الأغذية.</li>
-            </ul>
-        </div>
+    <!-- لوائح فنية منفصلة -->
+    <div id="pasta1Regulations" class="regulations">
+        <h2>النظم واللوائح الفنية للمعكرونة الطويلة</h2>
+        <ul>
+            <li><strong>المواصفات القياسية الجزائرية (NA):</strong> NA 54321 - مواصفات المعكرونة الجافة.</li>
+            <li><strong>المواصفات الدولية (ISO):</strong> ISO 22000 - نظام سلامة الأغذية.</li>
+        </ul>
+    </div>
 
-        <div id="pasta2Regulations">
-            <h3>المعكرونة القصيرة</h3>
-            <ul>
-                <li><strong>المواصفات القياسية الجزائرية (NA):</strong> NA 98765 - مواصفات المنتجات النشوية.</li>
-                <li><strong>المواصفات الدولية (ISO):</strong> ISO 9001 - إدارة الجودة.</li>
-            </ul>
-        </div>
+    <div id="pasta2Regulations" class="regulations">
+        <h2>النظم واللوائح الفنية للمعكرونة القصيرة</h2>
+        <ul>
+            <li><strong>المواصفات القياسية الجزائرية (NA):</strong> NA 98765 - مواصفات المنتجات النشوية.</li>
+            <li><strong>المواصفات الدولية (ISO):</strong> ISO 9001 - إدارة الجودة.</li>
+        </ul>
+    </div>
 
-        <div id="pasta3Regulations">
-            <h3>المعكرونة المحشوة</h3>
-            <ul>
-                <li><strong>المواصفات القياسية الجزائرية (NA):</strong> NA 11223 - مواصفات الأغذية المجمدة.</li>
-                <li><strong>المواصفات الدولية (ISO):</strong> ISO 17025 - متطلبات المختبرات.</li>
-            </ul>
-        </div>
+    <div id="pasta3Regulations" class="regulations">
+        <h2>النظم واللوائح الفنية للمعكرونة المحشوة</h2>
+        <ul>
+            <li><strong>المواصفات القياسية الجزائرية (NA):</strong> NA 11223 - مواصفات الأغذية المجمدة.</li>
+            <li><strong>المواصفات الدولية (ISO):</strong> ISO 17025 - متطلبات المختبرات.</li>
+        </ul>
+    </div>
 
-        <div id="pasta4Regulations">
-            <h3>النودلز الآسيوية</h3>
-            <ul>
-                <li><strong>المواصفات القياسية الجزائرية (NA):</strong> NA 66778 - مواصفات الوجبات السريعة.</li>
-                <li><strong>المواصفات الدولية (ISO):</strong> ISO 14001 - الإدارة البيئية.</li>
-            </ul>
-        </div>
+    <div id="pasta4Regulations" class="regulations">
+        <h2>النظم واللوائح الفنية للنودلز الآسيوية</h2>
+        <ul>
+            <li><strong>المواصفات القياسية الجزائرية (NA):</strong> NA 66778 - مواصفات الوجبات السريعة.</li>
+            <li><strong>المواصفات الدولية (ISO):</strong> ISO 14001 - الإدارة البيئية.</li>
+        </ul>
     </div>
 </div>
 
@@ -265,6 +253,11 @@
             detail.style.display = 'none';
         });
 
+        var regulations = document.querySelectorAll('.regulations');
+        regulations.forEach(function(regulation) {
+            regulation.style.display = 'none';
+        });
+
         var selectedProduct = document.getElementById('productSelect').value;
         if (selectedProduct) {
             var selectedDetail = document.getElementById(selectedProduct);
@@ -272,6 +265,11 @@
             setTimeout(function() {
                 selectedDetail.style.opacity = '1';
             }, 10);
+
+            var selectedRegulation = document.getElementById(selectedProduct + 'Regulations');
+            if (selectedRegulation) {
+                selectedRegulation.style.display = 'block';
+            }
         }
     }
 </script>
